fix: 제일 작은 반응형 사이즈에서 버튼간 gap 수정 버튼 크기 수정

--- a/src/pages/FocusPage/FocusPage.module.css
+++ b/src/pages/FocusPage/FocusPage.module.css
@@ -376,9 +376,12 @@
     font-size: 80px;
   }
 
+  .controlGroup {
+    gap: 8px;
+  }
   .buttonStart,
   .buttonStop {
-    width: 140px;
+    width: 130px;
     height: 45px;
     font-size: 18px;
   }
